--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,6 +19,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             cd /var/www/demo/storefront
+            git pull
             bun install
             bun run build
             bun x pm2 restart ecosystem.config.cjs
