--- a/.gitmodules
+++ b/.gitmodules
@@ -2,18 +2,22 @@
 [submodule "pb_hooks"]
 	path = pb_hooks
 	url = git@github.com:pocketstore-io/pb_hooks.git
+	branch = main
 
 # Data for Pocketbase
 [submodule "pb_data"]
 	path = pb_data
 	url = git@github.com:pocketstore-io/pb_data.git
+	branch = main
 
 # Storefront, extendable by Custom
 [submodule "storefront"]
 	path = storefront
 	url = git@github.com:pocketstore-io/storefront.git
+	branch = main
 
 # PB Migrations
 [submodule "pb_migrations"]
 	path = pb_migrations
 	url = git@github.com:pocketstore-io/pb_migrations.git
+	branch = main
