--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -1,38 +1,16 @@
-name: Create Release
+name: Releases
 
-permissions:
-  contents: write  # Adjust permissions as needed
-
-on:
+on: 
   push:
     tags:
-      - 'v*'
+    - 'v*'
 
 jobs:
-  release:
-    name: Create Release
+
+  build:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Create GitHub Release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref_name }}
-          release_name: Release ${{ github.ref_name }}
-          draft: false
-          prerelease: false
-
-      - name: Upload Release Assets
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create-release.outputs.upload_url }}
-          asset_path: ./path/to/your/asset.zip
-          asset_name: your-asset.zip
-          asset_content_type: application/zip
+    - uses: actions/checkout@v3
+    - uses: ncipollo/release-action@v1
