work on releases yml

--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -14,3 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: ncipollo/release-action@v1
+      with:
+        removeArtifacts: true
+        prerelease: true
+        makeLatest: true
