--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
+# Ignore Jetbrains Idea Folder
 .idea
+
+# Ignore node dependencies
 node_modules
+
+# Ignore composer dependencies
 vendor
 
-custom/custom/*
-custom/pages/*
-
-storefront/*
-
-# ignore keep.txt from storefront ?
+# Ignore keep.md
+custom/components/keep.md
+custom/pages/keep.md
