--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -8,10 +8,6 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
-    env:
-      TARGET_DIR: ${{ secrets.SSH_FOLDER }}  # You can set this to any directory, and make it dynamic as needed.
-
     steps:
       - name: SSH and Run Commands
         uses: appleboy/ssh-action@v0.1.5
@@ -21,7 +17,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: 22
           script: |
-            cd $TARGET_DIR
+            cd ${{ secrets.SSH_FOLDER }}
             git pull
             chmod u+x ./bin/extend.sh
             ./bin/extend.sh
