--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -20,7 +20,7 @@ jobs:
             cd ${{ secrets.SSH_FOLDER }}
             git pull
             chmod u+x ./bin/extend.go
-            gu run ./bin/extend.go
+            go run ./bin/extend.go
             cd storefront
             git pull
             bun install
