--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -23,6 +23,6 @@ jobs:
             go run ./bin/extend.go
             cd storefront
             git pull
-            npm install
-            npm run build
+            bun install
+            bun run build
             pm2 restart ecosystem.config.cjs
