--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,16 +15,7 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }} 
           key: ${{ secrets.SSH_KEY }}
-          port: 22
+          port: ${{ secrets.SSH_PORT }}
           script: |
-            export NVM_DIR=~/.nvm
-            source ~/.nvm/nvm.sh
             cd ${{ secrets.SSH_FOLDER }}
-            git pull
-            chmod u+x ./bin/extend.go
-            go run ./bin/extend.go
-            cd storefront
-            git pull
-            bun install
-            bun run build
-            pm2 restart ecosystem.config.cjs
+            docker compose up -d
