--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,4 +1,4 @@
-name: Deployment
+name: Deployment - Prod
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  deploy:
+  deploy_prod:
     runs-on: ubuntu-latest
     steps:
       - name: SSH and Run Commands
