--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -23,6 +23,7 @@ jobs:
             git pull
             go run bin/extend.go
             cd storefront
+            go run bin/lang.go
             npm i
             npm run build
             cd ..
