use main instead of tag as reference

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -20,9 +20,8 @@ jobs:
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
             cd /var/www/${{ secrets.SSH_FOLDER }}
-            git fetch --tags
-            latestTag=$(git describe --tags "$(git rev-list --tags --max-count=1)")
-            git checkout $latestTag
+            git reset --hard
+            git checkout main
             git pull
             go run bin/extend.go
             cd storefront
