--- a/docker-compose.develop.yml
+++ b/docker-compose.develop.yml
@@ -12,7 +12,7 @@ services:
     container_name: pocketbase_develop
     restart: unless-stopped
     ports:
-      - "6090:8090"
+      - "${PORT_POCKETBASE}:8090"
     healthcheck: # optional, recommended since v0.10.0
       test: wget --no-verbose --tries=1 --spider http://localhost:8090/api/health || exit 1
       interval: 5s
