--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -17,6 +17,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
+            echo "PORT_NUXT=${{ secrets.PORT_NUXT }}" >> .env
             echo "PORT_POCKETBASE=${{ secrets.PORT_POCKETBASE }}" >> .env
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
