--- a/docker-compose.develop.yml
+++ b/docker-compose.develop.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - .:/var/www/demo
     ports:
-      - "6010:3000"
+      - "${PORT_NUXT}:3000"
       
   pocketbase_develop:
     image: ghcr.io/muchobien/pocketbase:latest
