--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -17,6 +17,8 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
+            echo "PORT_NUXT=${{ secrets.PORT_STAGE_NUXT }}" >> .env
+            echo "PORT_POCKETBASE=${{ secrets.PORT_STAGE_POCKETBASE }}" >> .env
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
             cd /var/www/stage
