--- a/docker-compose.stage.yml
+++ b/docker-compose.stage.yml
@@ -5,14 +5,14 @@ services:
     volumes:
       - .:/var/www/demo
     ports:
-      - "6000:3000"
+      - "${PORT_NUXT}:3000"
       
   pocketbase_stage:
     image: ghcr.io/muchobien/pocketbase:latest
     container_name: pocketbase_stage
     restart: unless-stopped
     ports:
-      - "7090:8090"
+      - "${PORT_POCKETBASE}:8090"
     healthcheck: # optional, recommended since v0.10.0
       test: wget --no-verbose --tries=1 --spider http://localhost:8090/api/health || exit 1
       interval: 5s
