--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - .:/var/www/demo
     ports:
-      - "4000:3000"
+      - "${PORT_NUXT}:3000"
       
   pocketbase_prod:
     image: ghcr.io/muchobien/pocketbase:latest
@@ -14,7 +14,7 @@ services:
     volumes:
       - ./.hooks:/pb_hooks
     ports:
-      - "8090:8090"
+      - "${PORT_POCKETBASE}:8090"
     healthcheck: # optional, recommended since v0.10.0
       test: wget --no-verbose --tries=1 --spider http://localhost:8090/api/health || exit 1
       interval: 5s
