--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -17,11 +17,13 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            echo "PORT_NUXT=${{ secrets.PORT_DEV_NUXT }}" >> .env
-            echo "PORT_POCKETBASE=${{ secrets.PORT_DEV_POCKETBASE }}" >> .env
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
             cd /var/www/develop
+            echo "PORT_NUXT=${{ secrets.PORT_DEV_NUXT }}" >> .env
+            echo "PORT_POCKETBASE=${{ secrets.PORT_DEV_POCKETBASE }}" >> .env
+            echo "CONTAINER_NUXT=${{ secrets.CONTAINER_DEV_NUXT }}" >> .env
+            echo "CONTAINER_POCKETBASE=${{ secrets.CONTAINER_DEV_POCKETBASE }}" >> .env
             git pull
             git checkout develop
             go run bin/extend.go
