--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -26,6 +26,7 @@ jobs:
             go run bin/translations.go
             cd storefront
             npm i
+            bun run vitest
             npm run build
             cd ..
             docker compose stop
